feat(core): type tool outcomes and give the audit hooks real consumers
PR 1 built the right seam but typed its result as a boolean, let provider failures escape as exceptions, and left the audit hooks connected to nothing. All three grow more expensive to fix with every provider added, so they are corrected before the first real provider arrives.

A new ToolCallStatus enum replaces the boolean on ToolCallResult and ToolResultEvent, giving every layer one vocabulary for success, failure, refusal, timeout and containment outcomes. A provider that throws while reporting its catalog is now logged and skipped rather than aborting the whole execution, and a call-time name collision fails the node instead of reaching the agent as an ordinary tool failure. ExecutionContext exposes a single toolRouter setter, so a catalog and an invoker can no longer diverge, and ToolRegistry is narrowed to discovery.

The audit records become fit to keep: arguments are bounded and copied recursively, values of parameters marked sensitive are redacted before the event leaves the core, and both events carry the instant they occurred. The hooks finally get consumers — the composite fans them out and survives a throwing delegate, the server and CLI listeners print them, and two new SSE events put the tool trail on a stream clients already subscribe to. Both sinks carry argument names without their values.

Signed-off-by: Aleksandr Suvorov <asuvorov@hensu.io>

#94 PR 1/5 Part 2